[gd_scene load_steps=8 format=4 uid="uid://dvu7ny3j1n00j"]

[ext_resource type="Script" uid="uid://debtv741hvvl7" path="res://scenes/game/game.gd" id="1_lnu2h"]
[ext_resource type="TileSet" uid="uid://cro1fx4ifi25h" path="res://assets/tilesets/gametiles.tres" id="2_lbhrr"]
[ext_resource type="PackedScene" uid="uid://rfdyr27e7slo" path="res://scenes/level/level.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://c1phvu5go5bn" path="res://scenes/map/map_tiles.tscn" id="4_p57ef"]
[ext_resource type="PackedScene" uid="uid://2vyytgydvb1u" path="res://scenes/characters/enemy.tscn" id="5_iywne"]

[sub_resource type="LabelSettings" id="LabelSettings_lnu2h"]

[sub_resource type="LabelSettings" id="LabelSettings_lbhrr"]
line_spacing = 0.0
font_size = 8

[node name="Game" type="Node2D"]
script = ExtResource("1_lnu2h")

[node name="Background" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAAQABEAAAAAAAAAAAARABAAAAAAAAAAAAARABEAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAAAABAAAAAAAAAAAAAAABEAAAAAAAAAAAADAAkAAAACAAAAAAADAAgAAAACAAAAAAADAAcAAAACAAAAAAADAAYAAAACAAAAAAADAAUAAAACAAAAAAADAAQAAAAAAAAAAAADAAMAAAAAAAAAAAADAAIAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAAAAAAAAAAABABAAAAAAAAAAAAABABEAAAAAAAAAAAACABEAAAAAAAAAAAACABAAAAAAAAAAAAACAA8AAAACAAAAAAACAA4AAAACAAAAAAACAA0AAAACAAAAAAACAAwAAAACAAAAAAACAAsAAAACAAAAAAACAAoAAAACAAAAAAACAAkAAAACAAAAAAACAAgAAAACAAAAAAACAAcAAAACAAAAAAACAAYAAAACAAAAAAACAAUAAAACAAAAAAACAAQAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAADAAsAAAACAAAAAAADAAwAAAACAAAAAAADAA0AAAACAAAAAAADAA4AAAACAAAAAAADAA8AAAACAAAAAAADABAAAAAAAAAAAAADABEAAAAAAAAAAAAEABEAAAAAAAAAAAAEABAAAAAAAAAAAAAEAA8AAAACAAAAAAAEAA4AAAACAAAAAAAEAA0AAAACAAAAAAAEAAwAAAACAAAAAAAEAAsAAAACAAAAAAAEAAkAAAACAAAAAAAEAAgAAAACAAAAAAAEAAcAAAACAAAAAAAEAAYAAAACAAAAAAAEAAUAAAACAAAAAAAEAAQAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAACAAAAAAAFAAYAAAACAAAAAAAFAAcAAAACAAAAAAAFAAgAAAACAAAAAAAFAAkAAAACAAAAAAAFAAsAAAACAAAAAAAFAAwAAAACAAAAAAAFAA0AAAACAAAAAAAFAA4AAAACAAAAAAAFAA8AAAACAAAAAAAFABAAAAAAAAAAAAAFABEAAAAAAAAAAAAGABEAAAAAAAAAAAAGABAAAAAAAAAAAAAGAA8AAAACAAAAAAAGAA4AAAACAAAAAAAGAA0AAAACAAAAAAAGAAwAAAACAAAAAAAGAAsAAAACAAAAAAAGAAkAAAACAAAAAAAGAAgAAAACAAAAAAAGAAcAAAACAAAAAAAGAAYAAAACAAAAAAAGAAUAAAACAAAAAAAGAAQAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAACAAAAAAAHAAYAAAACAAAAAAAHAAcAAAACAAAAAAAHAAgAAAACAAAAAAAHAAkAAAACAAAAAAAHAAsAAAACAAAAAAAHAAwAAAACAAAAAAAHAA0AAAACAAAAAAAHAA4AAAACAAAAAAAHAA8AAAACAAAAAAAHABAAAAAAAAAAAAAHABEAAAAAAAAAAAAIABEAAAAAAAAAAAAIABAAAAAAAAAAAAAIAA4AAAACAAAAAAAIAA0AAAACAAAAAAAIAAwAAAACAAAAAAAIAAsAAAACAAAAAAAIAAoAAAACAAAAAAAIAAkAAAACAAAAAAAIAAgAAAACAAAAAAAIAAcAAAACAAAAAAAIAAYAAAACAAAAAAAIAAUAAAACAAAAAAAIAAQAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAACAAAAAAAJAAYAAAACAAAAAAAJAAcAAAACAAAAAAAJAAgAAAACAAAAAAAJAAkAAAACAAAAAAAJAAoAAAACAAAAAAAJAAsAAAACAAAAAAAJAAwAAAACAAAAAAAJAA0AAAACAAAAAAAJAA4AAAACAAAAAAAJAA8AAAACAAAAAAAJABAAAAAAAAAAAAAJABEAAAAAAAAAAAAKABEAAAAAAAAAAAAKABAAAAAAAAAAAAAKAA8AAAACAAAAAAAKAA4AAAACAAAAAAAKAA0AAAACAAAAAAAKAAwAAAACAAAAAAAKAAsAAAACAAAAAAAKAAoAAAACAAAAAAAKAAkAAAACAAAAAAAKAAgAAAACAAAAAAAKAAcAAAACAAAAAAAKAAYAAAACAAAAAAAKAAUAAAACAAAAAAAKAAQAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAACAAAAAAALAAYAAAACAAAAAAALAAcAAAACAAAAAAALAAgAAAACAAAAAAALAAkAAAACAAAAAAALAAoAAAACAAAAAAALAAsAAAACAAAAAAALAAwAAAACAAAAAAALAA0AAAACAAAAAAALAA8AAAACAAAAAAALABAAAAAAAAAAAAALABEAAAAAAAAAAAAMABEAAAAAAAAAAAAMABAAAAAAAAAAAAAMAA8AAAACAAAAAAAMAA0AAAACAAAAAAAMAAwAAAACAAAAAAAMAAsAAAACAAAAAAAMAAkAAAACAAAAAAAMAAgAAAACAAAAAAAMAAcAAAACAAAAAAAMAAYAAAACAAAAAAAMAAUAAAACAAAAAAAMAAQAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAIAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAANAA0AAAAAAAAAAAANAA8AAAAAAAAAAAANABAAAAAAAAAAAAANABEAAAAAAAAAAAAOABEAAAAAAAAAAAAOABAAAAAAAAAAAAAOAA8AAAAAAAAAAAAOAA0AAAAAAAAAAAAOAAwAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAIAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPABAAAAAAAAAAAAAPABEAAAAAAAAAAAAQABAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAPAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAANAAEAAAAAAAAAAAAMAAEAAAAAAAAAAAALAAEAAAAAAAAAAAAPAAQAAAAAAAAAAAALAA4AAAACAAAAAAAMAA4AAAACAAAAAAANAA4AAAAAAAAAAAAOAA4AAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAATABAAAAAAAAAAAAATABEAAAAAAAAAAAASABEAAAAAAAAAAAASABAAAAAAAAAAAAASAAQAAAAAAAAAAAASAAMAAAAAAAAAAAASAAIAAAAAAAAAAAASAAEAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAAHAAoAAAACAAAAAAAOAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAMAAoAAAACAAAAAAAGAAoAAAACAAAAAAAFAAoAAAACAAAAAAAEAAoAAAACAAAAAAADAAoAAAACAAAAAAAIAA8AAAACAAAAAAASAA8AAAAAAAAAAAATAA8AAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAAAAAAAAAASAAwAAAAAAAAAAAASAA4AAAAAAAAAAAASAA0AAAAAAAAAAAATAA0AAAAAAAAAAAATAAwAAAAAAAAAAAATAAsAAAAAAAAAAAATAAoAAAAAAAAAAAATAAkAAAAAAAAAAAATAAgAAAAAAAAAAAATAAcAAAAAAAAAAAATAAYAAAAAAAAAAAATAAUAAAAAAAAAAAATAA4AAAAAAAAAAAAPAAYAAAAAAAAAAAAQAAYAAAAAAAAAAAARAAYAAAAAAAAAAAARAAUAAAAAAAAAAAAQAAUAAAAAAAAAAAAPAAUAAAAAAAAAAAA=")
tile_set = ExtResource("2_lbhrr")

[node name="Levels" type="Node2D" parent="."]

[node name="Level1" parent="Levels" node_paths=PackedStringArray("blocks_config", "wind_config", "markers_config", "enemies") instance=ExtResource("4_lbhrr")]
blocks_config = NodePath("BlocksConfig")
wind_config = NodePath("WindConfig")
markers_config = NodePath("MarkersConfig")
inventory_config = Array[int]([1, 2])
player_start_position = Vector2i(5, 9)
enemies = [NodePath("AngryRedMan0")]

[node name="MarkersConfig" parent="Levels/Level1" instance=ExtResource("4_p57ef")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAAFAAIAAAAAAAEAAAACAAMAAAADAAAAAAABAAMAAAADAAAAAAABAAQAAAADAAAAAAABAAUAAAADAAAAAAADAAMAAAADAAAAAAADAAQAAAADAAAAAAADAAUAAAADAAAAAAADAAYAAAADAAAAAAADAAgAAAADAAAAAAADAAcAAAADAAAAAAACAAgAAAADAAAAAAABAAgAAAADAAAAAAABAAcAAAADAAAAAAABAAYAAAADAAAAAAACAAcAAAADAAAAAAACAAYAAAADAAAAAAACAAUAAAADAAAAAAACAAQAAAADAAAAAAAJAAMAAAADAAAAAAAJAAQAAAADAAAAAAAJAAUAAAADAAAAAAAJAAYAAAADAAAAAAAJAAcAAAADAAAAAAAJAAgAAAADAAAAAAAIAAgAAAADAAAAAAAHAAgAAAADAAAAAAAHAAcAAAADAAAAAAAHAAYAAAADAAAAAAAHAAUAAAADAAAAAAAHAAQAAAADAAAAAAAHAAMAAAADAAAAAAAIAAMAAAADAAAAAAAIAAQAAAADAAAAAAAIAAUAAAADAAAAAAAIAAYAAAADAAAAAAAIAAcAAAADAAAAAAA=")

[node name="WindConfig" parent="Levels/Level1" instance=ExtResource("4_p57ef")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAABAAQAAQAAAAQAAQABAAMAAQAAAAQAAQACAAMAAQAAAAQAAQADAAMAAQAAAAQAAQADAAQAAQAAAAQAAQACAAQAAQAAAAQAAQAHAAMAAQAAAAQAAQAIAAMAAQAAAAQAAQAJAAMAAQAAAAQAAQAJAAQAAQAAAAQAAQAIAAQAAQAAAAQAAQAHAAQAAQAAAAQAAQA=")

[node name="BlocksConfig" parent="Levels/Level1" instance=ExtResource("4_p57ef")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAACAAoAAQAAAAEAAAADAAoAAQAAAAEAAAAEAAoAAQAAAAEAAAAJAAoAAQAAAAEAAAAKAAUAAQAAAAEAAAAKAAcAAQAAAAEAAAAKAAoAAQAAAAEAAAAAAAAAAQAAAAEAAAAAAAEAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAMAAQAAAAEAAAAAAAQAAQAAAAEAAAAAAAUAAQAAAAEAAAAAAAYAAQAAAAEAAAAAAAcAAQAAAAEAAAAAAAgAAQAAAAEAAAAAAAkAAQAAAAEAAAAAAAoAAQAAAAEAAAABAAAAAQAAAAEAAAABAAoAAQAAAAEAAAACAAAAAQAAAAEAAAADAAAAAQAAAAEAAAAEAAAAAQAAAAEAAAAFAAAAAQAAAAEAAAAGAAAAAQAAAAEAAAAGAAoAAQAAAAEAAAAHAAAAAQAAAAEAAAAHAAoAAQAAAAEAAAAIAAAAAQAAAAEAAAAIAAoAAQAAAAEAAAAJAAAAAQAAAAEAAAAKAAAAAQAAAAEAAAAKAAEAAQAAAAEAAAAKAAIAAQAAAAEAAAAKAAMAAQAAAAEAAAAKAAQAAQAAAAEAAAAKAAYAAQAAAAEAAAAKAAgAAQAAAAEAAAAKAAkAAQAAAAEAAAAFAAoAAQAAAAEAAAADAAkAAQAAAAEAAAABAAkAAQAAAAEAAAACAAkAAQAAAAEAAAAIAAkAAQAAAAEAAAAHAAkAAQAAAAEAAAAJAAkAAQAAAAEAAAABAAEAAQAAAAEAAAACAAEAAQAAAAEAAAADAAEAAQAAAAEAAAAHAAEAAQAAAAEAAAAIAAEAAQAAAAEAAAAJAAEAAQAAAAEAAAAEAAUAAQAAAAEAAAAFAAUAAQAAAAEAAAAGAAUAAQAAAAEAAAABAAIAAQAAAAMAAAACAAIAAQAAAAMAAAADAAIAAQAAAAMAAAAHAAIAAQAAAAMAAAAIAAIAAQAAAAMAAAAJAAIAAQAAAAMAAAA=")

[node name="AngryRedMan0" parent="Levels/Level1" instance=ExtResource("5_iywne")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAAFAAYAAQAAAAAAAAA=")
kind = 1
start_position = Vector2i(5, 6)

[node name="Level2" parent="Levels" node_paths=PackedStringArray("blocks_config", "wind_config", "markers_config", "enemies") instance=ExtResource("4_lbhrr")]
blocks_config = NodePath("BlocksConfig")
wind_config = NodePath("WindConfig")
markers_config = NodePath("MarkersConfig")
inventory_config = Array[int]([1, 4])
player_start_position = Vector2i(5, 9)
enemies = [NodePath("AngryRedMan0"), NodePath("AngryRedMan1"), NodePath("AngryRedMan2")]

[node name="MarkersConfig" parent="Levels/Level2" instance=ExtResource("4_p57ef")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAACAAMAAAADAAAAAAAFAAEAAAAAAAEAAAACAAUAAAADAAAAAAAIAAcAAAADAAAAAAAIAAMAAAADAAAAAAAIAAUAAAADAAAAAAACAAcAAAADAAAAAAADAAcAAAADAAAAAAAHAAcAAAADAAAAAAADAAMAAAADAAAAAAAJAAUAAAADAAAAAAAHAAMAAAADAAAAAAA=")

[node name="WindConfig" parent="Levels/Level2" instance=ExtResource("4_p57ef")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAABAAMAAQAAAAQAAgAEAAQAAQAAAAQAAgAFAAQAAQAAAAQAAgAGAAQAAQAAAAQAAgA=")

[node name="BlocksConfig" parent="Levels/Level2" instance=ExtResource("4_p57ef")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAACAAoAAQAAAAEAAAADAAoAAQAAAAEAAAAEAAoAAQAAAAEAAAAJAAoAAQAAAAEAAAAKAAUAAQAAAAEAAAAKAAcAAQAAAAEAAAAKAAoAAQAAAAEAAAAAAAAAAQAAAAEAAAAAAAEAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAMAAQAAAAEAAAAAAAQAAQAAAAEAAAAAAAUAAQAAAAEAAAAAAAYAAQAAAAEAAAAAAAcAAQAAAAEAAAAAAAgAAQAAAAEAAAAAAAkAAQAAAAEAAAAAAAoAAQAAAAEAAAABAAAAAQAAAAEAAAABAAoAAQAAAAEAAAACAAAAAQAAAAEAAAADAAAAAQAAAAEAAAAEAAAAAQAAAAEAAAAFAAAAAQAAAAEAAAAGAAAAAQAAAAEAAAAGAAoAAQAAAAEAAAAHAAAAAQAAAAEAAAAHAAoAAQAAAAEAAAAIAAAAAQAAAAEAAAAIAAoAAQAAAAEAAAAJAAAAAQAAAAEAAAAKAAAAAQAAAAEAAAAKAAEAAQAAAAEAAAAKAAIAAQAAAAEAAAAKAAMAAQAAAAEAAAAKAAQAAQAAAAEAAAAKAAYAAQAAAAEAAAAKAAgAAQAAAAEAAAAKAAkAAQAAAAEAAAAEAAEAAQAAAAEAAAADAAEAAQAAAAEAAAACAAEAAQAAAAEAAAABAAEAAQAAAAEAAAAGAAEAAQAAAAEAAAAHAAEAAQAAAAEAAAAIAAEAAQAAAAEAAAAJAAEAAQAAAAEAAAAEAAkAAQAAAAEAAAADAAkAAQAAAAEAAAACAAkAAQAAAAEAAAABAAkAAQAAAAEAAAAGAAkAAQAAAAEAAAAHAAkAAQAAAAEAAAAIAAkAAQAAAAEAAAAJAAkAAQAAAAEAAAAFAAoAAQAAAAEAAAAJAAMAAQAAAAEAAAAJAAIAAQAAAAEAAAABAAIAAQAAAAEAAAACAAIAAQAAAAEAAAAIAAIAAQAAAAEAAAABAAcAAQAAAAEAAAAJAAcAAQAAAAEAAAABAAUAAQAAAAEAAAA=")

[node name="AngryRedMan0" parent="Levels/Level2" instance=ExtResource("5_iywne")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAAEAAcAAQAAAAAAAAA=")
kind = 1
start_position = Vector2i(4, 7)

[node name="AngryRedMan1" parent="Levels/Level2" instance=ExtResource("5_iywne")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAAFAAUAAQAAAAAAAAA=")
kind = 1
start_position = Vector2i(5, 5)

[node name="AngryRedMan2" parent="Levels/Level2" instance=ExtResource("5_iywne")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAAGAAMAAQAAAAAAAAA=")
kind = 1
start_position = Vector2i(6, 3)

[node name="Level3" parent="Levels" node_paths=PackedStringArray("blocks_config", "wind_config", "markers_config", "enemies") instance=ExtResource("4_lbhrr")]
blocks_config = NodePath("BlocksConfig")
wind_config = NodePath("WindConfig")
markers_config = NodePath("MarkersConfig")
inventory_config = Array[int]([1, 1, 1, 1, 2])
player_start_position = Vector2i(5, 9)
enemies = [NodePath("AngryRedMan0"), NodePath("AngryRedMan1")]

[node name="MarkersConfig" parent="Levels/Level3" instance=ExtResource("4_p57ef")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAAFAAIAAAADAAAAAAAGAAIAAAADAAAAAAAGAAMAAAADAAAAAAAGAAQAAAADAAAAAAAGAAUAAAADAAAAAAAGAAYAAAADAAAAAAAGAAcAAAADAAAAAAAFAAcAAAADAAAAAAAFAAYAAAADAAAAAAAFAAUAAAADAAAAAAAFAAQAAAADAAAAAAAFAAMAAAADAAAAAAADAAEAAAADAAAAAAABAAEAAAADAAAAAAABAAIAAAADAAAAAAABAAMAAAADAAAAAAACAAMAAAADAAAAAAADAAMAAAADAAAAAAADAAIAAAADAAAAAAACAAIAAAAAAAEAAAADAAQAAAADAAAAAAACAAQAAAADAAAAAAABAAQAAAADAAAAAAADAAUAAAADAAAAAAACAAUAAAADAAAAAAABAAUAAAADAAAAAAACAAEAAAADAAAAAAA=")

[node name="WindConfig" parent="Levels/Level3" instance=ExtResource("4_p57ef")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAAFAAIAAQAAAAQAAQAFAAMAAQAAAAQAAQAFAAQAAQAAAAQAAQAFAAUAAQAAAAQAAQAFAAYAAQAAAAQAAQAFAAcAAQAAAAQAAQAGAAIAAQAAAAQAAgAGAAMAAQAAAAQAAgAGAAQAAQAAAAQAAgAGAAUAAQAAAAQAAgAGAAYAAQAAAAQAAgAGAAcAAQAAAAQAAgACAAcAAQAAAAQAAwA=")

[node name="BlocksConfig" parent="Levels/Level3" instance=ExtResource("4_p57ef")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAACAAoAAQAAAAEAAAADAAoAAQAAAAEAAAAEAAoAAQAAAAEAAAAJAAoAAQAAAAEAAAAKAAUAAQAAAAEAAAAKAAcAAQAAAAEAAAAKAAoAAQAAAAEAAAAAAAAAAQAAAAEAAAAAAAEAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAMAAQAAAAEAAAAAAAQAAQAAAAEAAAAAAAUAAQAAAAEAAAAAAAgAAQAAAAEAAAAAAAkAAQAAAAEAAAAAAAoAAQAAAAEAAAABAAAAAQAAAAEAAAABAAoAAQAAAAEAAAACAAAAAQAAAAEAAAADAAAAAQAAAAEAAAAEAAAAAQAAAAEAAAAFAAAAAQAAAAEAAAAGAAAAAQAAAAEAAAAGAAoAAQAAAAEAAAAHAAAAAQAAAAEAAAAHAAoAAQAAAAEAAAAIAAAAAQAAAAEAAAAIAAoAAQAAAAEAAAAJAAAAAQAAAAEAAAAKAAAAAQAAAAEAAAAKAAEAAQAAAAEAAAAKAAIAAQAAAAEAAAAKAAMAAQAAAAEAAAAKAAQAAQAAAAEAAAAKAAYAAQAAAAEAAAAKAAgAAQAAAAEAAAAKAAkAAQAAAAEAAAAFAAoAAQAAAAEAAAAAAAYAAQAAAAEAAAAAAAcAAQAAAAEAAAAHAAcAAQAAAAEAAAAHAAYAAQAAAAEAAAAHAAUAAQAAAAEAAAAHAAQAAQAAAAEAAAAHAAMAAQAAAAEAAAAHAAIAAQAAAAEAAAAEAAIAAQAAAAEAAAAEAAMAAQAAAAEAAAAEAAQAAQAAAAEAAAAEAAUAAQAAAAEAAAAEAAYAAQAAAAEAAAAEAAcAAQAAAAEAAAABAAYAAQAAAAEAAAABAAgAAQAAAAEAAAAEAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAJAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAEAAQAAAAMAAAA=")

[node name="AngryRedMan0" parent="Levels/Level3" instance=ExtResource("5_iywne")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAAFAAkAAAAAAAAAAAACAAUAAQAAAAEAAAA=")
start_position = Vector2i(2, 5)

[node name="AngryRedMan1" parent="Levels/Level3" instance=ExtResource("5_iywne")]
position = Vector2(32, 80)
tile_map_data = PackedByteArray("AAADAAcAAQAAAAAAAAA=")
kind = 1
start_position = Vector2i(3, 7)

[node name="Title" type="Label" parent="."]
offset_right = 320.0
offset_bottom = 80.0
text = "[MAGIC MAP GAME]"
label_settings = SubResource("LabelSettings_lnu2h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PhaseLabel" type="Label" parent="."]
offset_left = 208.0
offset_top = 72.0
offset_right = 320.0
offset_bottom = 112.0
text = "PLAN YOUR
EXPEDITION"
label_settings = SubResource("LabelSettings_lbhrr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinMenu" type="ColorRect" parent="."]
visible = false
offset_left = 64.0
offset_top = 128.0
offset_right = 176.0
offset_bottom = 216.0
color = Color(0, 0, 0, 0.619608)

[node name="WinMessage" type="Label" parent="WinMenu"]
layout_mode = 0
offset_right = 112.0
offset_bottom = 48.0
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="WinMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = 48.0
offset_right = 80.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 8
text = "MENU"

[node name="LossMenu" type="ColorRect" parent="."]
visible = false
offset_left = 64.0
offset_top = 112.0
offset_right = 176.0
offset_bottom = 232.0
color = Color(0, 0, 0, 0.607843)

[node name="WinMessage" type="Label" parent="LossMenu"]
layout_mode = 0
offset_right = 112.0
offset_bottom = 48.0
text = "YOU LOSE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetButton" type="Button" parent="LossMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = 48.0
offset_right = 80.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 8
text = "RESET"

[node name="MenuButton" type="Button" parent="LossMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 8
text = "MENU"

[connection signal="pressed" from="WinMenu/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="LossMenu/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="LossMenu/MenuButton" to="." method="_on_menu_button_pressed"]
